--- a/Downloads/shipify-logistics-4/index.html
+++ b/Downloads/shipify-logistics-4/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shipify Logistics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,10 +33,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="./index.css">
 </head>
   <body class="h-full bg-slate-50 text-slate-800">
     <div id="root" class="h-full"></div>
-    <script type="module" src="/index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
   </body>
 </html>
