--- a/Downloads/shipify-logistics-4/index.html
+++ b/Downloads/shipify-logistics-4/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shipify Logistics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,23 +20,23 @@
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-    "vite": "https://aistudiocdn.com/vite@^7.1.3",
-    "process": "https://aistudiocdn.com/process@^0.11.10"
-  }
-}
-</script>
-<link rel="stylesheet" href="./index.css">
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://aistudiocdn.com/react@^19.1.1",
+        "react/": "https://aistudiocdn.com/react@^19.1.1/",
+        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+        "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+        "vite": "https://aistudiocdn.com/vite@^7.1.3",
+        "process": "https://aistudiocdn.com/process@^0.11.10"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="index.css">
+  </head>
   <body class="h-full bg-slate-50 text-slate-800">
     <div id="root" class="h-full"></div>
-  <script type="module" src="./index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
